          engine. Reported by Steve Loughran.
        - Fixed directory redirections in DirectoryResource class.
    - API Enhancements
        - Made the org.restlet.util.Resolver generic and used it in 
          Guard to allow the user to provide a secret resolver without
          needing to subclass Guard. Deprecated the findSecret(String) 
          method. 
    - NRE and Extension Enhancements
        - Made the ServerServlet.create*() method protected instead of 
          public.
        - Added a ServerServlet.createCall() method for easier 
          subclassingby the XDB extension.
        - Added new javax.annotation library for the JAX-RS extension.
        - Added ServerServlet.getClass() method to facilitate 
          subclassing by the XDB extension. Suggested by Marcelo Ochoa.
    - Misc
        - Reformatting of the changes log. Contributed by Avi Flax.
        - All Component subclasses now use a main method that throws 
          exceptions and takes a string array as parameter.
        - More precise log message for a Resource with no variant.
        - Otpimized Eclipse dependencies by leveraging reexport option.
 
 - 1.1 Milestone 2 (2008-02-29)
    - Bugs fixed
        - Fixed NPE in Connector class. Reported by Rob Heittman and
          fixed by Tim Peierls.
        - WriterRepresentation was missing a default implementation for
          getReader() abstract method.
        - If an error is found in HttpClientHelper.sendRequest(),
          StreamClientHelper ignores it and continues to parse the
          response when it should stop processing. Fixed by Kevin
          Conaway.
        - Status.isSuccess(), is*Error(), isRedirection() and isInfo()
          methods now support status classes as specified in HTTP 1.1.
          Reported by Paul J. Lucas.
        - The request ClientInfo address and port were not available
          for the default connector and the Grizzly connector. Patch
          contributed by Kevin Conaway.